--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "^2.23.0",
-    "react-native-reanimated": "^3.16.7",
+    "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.4.0",
     "react-native-svg": "^15.11.1",
