--- a/app.json
+++ b/app.json
@@ -8,15 +8,40 @@
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "projectId": "4b17448b-8624-4f2c-9878-1b18076dc56b",
+    "extra": {
+      "eas": {
+        "projectId": "4b17448b-8624-4f2c-9878-1b18076dc56b"
+      }
+    },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.infanteresidences.taskmanager"
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
+      },
+      "package": "com.infanteresidences.taskmanager",
+      "permissions": ["NOTIFICATIONS"]
     },
     "web": {
       "bundler": "metro",
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      [
+        "expo-notifications",
+        {
+          "icon": "🔔",
+          "color": "#0891b2",
+          "sounds": ["./assets/sounds/notification.wav"]
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true
     }
